--- a/components/foot.html
+++ b/components/foot.html
@@ -5,5 +5,13 @@
 
     <script src="../js/app.js"></script>
 
+    <script>
+      function changeFrameHeight(this){
+          this.height=document.documentElement.clientHeight;
+      }
+      window.onresize=function(){  
+          changeFrameHeight();  
+      }
+    </script>
   </body>
 </html>
