feat: 完成抓客和数据库对接的大部分

--- a/components/detail-menshi.html
+++ b/components/detail-menshi.html
@@ -1,18 +1,24 @@
-<div class="panel panel-primary">
+<div class="has-menshi panel panel-primary">
   <div class="panel-body">
     <div class="customer-info-message">
       <div class="title">
         <div class="name col-xs-6">门店门市沟通记录</div>
         <div class="user-info col-xs-6">
-          <p class="username">新凯旋店：大卫</p>
-          <p class="date">2016-09-09 18:00</p>
+          <p class="username">
+            <span class="replace-data" data-name="ms-shop-name">新凯旋店</span>
+            ：
+            <span class="replace-data" data-name="ms-username">大卫</span>
+          </p>
+          <p class="date">
+            <span class="replace-data" data-name="ms-order-time">2016-09-09 18:00</span>
+          </p>
         </div>
       </div>
       <div class="info">
         <div class="item col-xs-12">
 					<div class="name">门店沟通记录</div>
 					<div class="msg">
-						抓客客服沟通记录1<br> 抓客客服沟通记录2
+						<span class="replace-data" data-name="ms-customer-record">抓客客服沟通记录1<br> 抓客客服沟通记录2</span>
 					</div>
 				</div>
       </div>
