--- a/components/detail-zhuake.html
+++ b/components/detail-zhuake.html
@@ -4,47 +4,69 @@
 			<div class="title">
 				<div class="name col-xs-6">抓客资料</div>
 				<div class="user-info col-xs-6">
-					<p class="username">抓客组：小敏</p>
-					<p class="date">2016-09-09 18:00</p>
+					<p class="username">抓客组：
+						<span class="replace-data" data-name="zk-username">小敏</span>
+					</p>
+					<p class="date">
+            <span class="replace-data" data-name="zk-record-time">2016-09-09 18:00</span>
+          </p>
 				</div>
 			</div>
 			<div class="info">
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">称呼</span>
-					<span class="msg col-xs-10">对客户的称呼</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-name">对客户的称呼</span>
+          </span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">手机</span>
-					<span class="msg col-xs-10">12345678901</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-cellphone">12345678901</span>
+          </span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">渠道</span>
-					<span class="msg col-xs-10">渠道</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-channel">渠道</span>
+					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">微信</span>
-					<span class="msg col-xs-10">微信阿萨德</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-wechat">微信阿萨德</span>
+					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">地区</span>
-					<span class="msg col-xs-10">江苏</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-location">江苏</span>
+					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">QQ</span>
-					<span class="msg col-xs-10">13447823</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-qq">13447823</span>
+					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">类别</span>
-					<span class="msg col-xs-10">123123</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-type">123123</span>
+					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-2">身份</span>
-					<span class="msg col-xs-10">新郎</span>
+					<span class="msg col-xs-10">
+            <span class="replace-data" data-name="zk-customer-identity">新郎</span>
+					</span>
 				</div>
 				<div class="item col-xs-12">
 					<div class="name">抓客客服沟通记录</div>
 					<div class="msg">
+            <span class="replace-data" data-name="zk-customer-record">
 						抓客客服沟通记录1<br> 抓客客服沟通记录2
+            </span>
 					</div>
 				</div>
 			</div>
