--- a/components/detail-status.html
+++ b/components/detail-status.html
@@ -3,36 +3,71 @@
 	<div class="panel-body">
 		<div class="customer-status-message">
 			<div class="title">
-				客资状态：客户到店已订单
-				<div class="small">最近更新：门店门市-张磊 2016-09-09 19:22</div>
+				客资状态：<span class="replace-data" data-name="status">客户到店已订单</span>
+				<div class="small">最近更新：
+          <span class="replace-data" data-name="last-modify-department">门店门市</span>
+          -
+          <span class="replace-data" data-name="last-modify-username">张磊</span>
+          &nbsp;
+          <span class="replace-data" data-name="last-modify-time">2016-09-09 19:22</span>
+        </div>
 			</div>
 			<div class="message-tr">
 				<div class="tr-title col-xs-2">
 					抓客
 				</div>
 				<div class="tr-info col-xs-10">
-					<p>来源：抓客客服-阿君 渠道：官网-百度</p>
-					<p>登记时间：2016-09-09 18:00</p>
+					<p>来源：抓客客服-
+            <span class="replace-data" data-name="zk-username">阿君</span>
+            &nbsp;渠道：
+            <span class="replace-data" data-name="zk-channel">官网-百度</span>
+          </p>
+					<p>登记时间：
+            <span class="replace-data" data-name="zk-record-time">2016-09-09 18:00</span>
+          </p>
 				</div>
 			</div>
-			<div class="message-tr">
+			<div class="has-yaoyue message-tr">
 				<div class="tr-title col-xs-2">
 					邀约
 				</div>
 				<div class="tr-info col-xs-10">
-					<p>邀约：抓客客服-小丽 方式：邀约到店</p>
-					<p>预计到店时间：2016年09月08日 下午三四点</p>
-					<p>接收：2016-09-09 17:20 下发：2016-09-09 19:20</p>
+					<p>邀约：邀约客服-
+            <span class="replace-data" data-name="yy-username">小丽</span>
+            &nbsp;方式：<span class="replace-data" data-name="yy-type">邀约到店</span>
+          </p>
+					<p>预计到店时间：
+            <span class="replace-data" data-name="yy-daodian-date">2016年09月08日</span>
+            &nbsp;
+            <span class="replace-data" data-name="yy-daodian-time">下午三四点</span>
+          </p>
+					<p>接收：
+            <span class="replace-data" data-name="yy-accept-time">2016-09-09 17:20</span>
+            &nbsp;下发：
+            <span class="replace-data" data-name="yy-transfer-time">2016-09-09 19:20</span>
+          </p>
 				</div>
 			</div>
-			<div class="message-tr">
+			<div class="has-menshi message-tr">
 				<div class="tr-title col-xs-2">
 					到店
 				</div>
 				<div class="tr-info col-xs-10">
-					<p>门店门市：金凯旋店-小敏</p>
-					<p>订单金额：3439元 付款：1000</p>
-					<p>接收：2016-09-09 17:20 订单：2016-09-09 19:20</p>
+					<p>门店门市：
+            <span class="replace-data" data-name="ms-shop-name">金凯旋店</span>
+            -
+            <span class="replace-data" data-name="ms-username">小敏</span>
+          </p>
+					<p>订单金额：
+            <span class="replace-data" data-name="ms-trade-money">3439</span>
+            元&nbsp;付款：
+            <span class="replace-data" data-name="ms-paid-money">1000</span>
+          </p>
+					<p>接收：
+            <span class="replace-data" data-name="ms-accept-time">2016-09-09 17:20</span>
+            &nbsp;订单：
+            <span class="replace-data" data-name="ms-order-time">2016-09-09 19:20</span>
+          </p>
 				</div>
 			</div>
 			<div class="btn-group btn-group-justified margin-top-10">
