--- a/components/head-iframe.html
+++ b/components/head-iframe.html
@@ -9,6 +9,7 @@
 
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css/dataTables.bootstrap.min.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,6 +19,29 @@
     <![endif]-->
 
 	<link rel="stylesheet" href="../css/app.css">
+
+	<script src="../js/jquery-2.0.3.min.js"></script>
+	<script src="../js/jquery.dataTables.min.js"></script>
+	<script src="../js/dataTables.bootstrap.min.js"></script>
+	<script>
+		$.extend( true, $.fn.dataTable.defaults, {
+			ordering: false,
+      searching: false,
+      processing: true,
+      lengthChange: false,
+      info: false,
+      paging: false,
+      language: {
+        paginate: {
+          first: '首页',
+          last: '最后一页',
+          next: '下一页',
+          previous: '上一页'
+        }
+      }
+		});
+	</script>
+	<script src="../js/app-iframe.js"></script>
 </head>
 
 <body>
