--- a/components/detail-yaoyue.html
+++ b/components/detail-yaoyue.html
@@ -1,4 +1,4 @@
-<div class="has-yaoyue panel panel-primary">
+<div class="has-yaoyue hidden panel panel-primary">
 	<div class="panel-body">
 		<div class="customer-info-message">
 			<div class="title">
