feat: 添加bootstrap-datepicker

--- a/components/detail-menshi.html
+++ b/components/detail-menshi.html
@@ -17,7 +17,7 @@
       <div class="info">
         <div class="item col-xs-12">
 					<div class="name">门店沟通记录</div>
-					<div class="msg">
+					<div class="msg min-height-40">
 						<span class="replace-data" data-name="ms-customer-record">抓客客服沟通记录1<br> 抓客客服沟通记录2</span>
 					</div>
 				</div>
