--- a/components/detail-status.html
+++ b/components/detail-status.html
@@ -49,7 +49,7 @@
       </div>
 			<div id="status-operations" class="btn-group btn-group-justified margin-top-10"></div>
 			
-			<a id="zk-xiugai" href="../zhuake/operate-xiugai.html" class="btn btn-default hidden">修改</a>
+			<a id="zk-xiugai" href="../zhuake/add.html" class="btn btn-default hidden">修改</a>
 			<a id="zk-zhiding" href="../zhuake/operate-zhiding.html" class="btn btn-default hidden">指定</a>
 			<a id="zk-shanchu" href="../zhuake/operate-shanchu.html" class="btn btn-default hidden">删除</a>
 			<a id="zk-shensu" href="../zhuake/operate-shensu.html" class="btn btn-default hidden">申诉</a>
