--- a/components/detail-yaoyue.html
+++ b/components/detail-yaoyue.html
@@ -39,25 +39,25 @@
 				</div>
 				<div class="item col-xs-12">
 					<div class="name">拍摄想法</div>
-					<div class="msg">
+					<div class="msg min-height-40">
 						<span class="replace-data" data-name="yy-customer-shooting-record">想法1<br> 想法2</span>
 					</div>
 				</div>
         <div class="item col-xs-12">
 					<div class="name">担心问题</div>
-					<div class="msg">
+					<div class="msg min-height-40">
 						<span class="replace-data" data-name="yy-customer-worry-record">想法1<br> 想法2</span>
 					</div>
 				</div>
         <div class="item col-xs-12">
 					<div class="name">订单需求</div>
-					<div class="msg">
+					<div class="msg min-height-40">
 						<span class="replace-data" data-name="yy-customer-order-record">想法1<br> 想法2</span>
 					</div>
 				</div>
         <div class="item col-xs-12">
 					<div class="name">邀约客服沟通记录</div>
-					<div class="msg">
+					<div class="msg min-height-40">
 						<span class="replace-data" data-name="yy-customer-record">想法1<br> 想法2</span>
 					</div>
 				</div>
