--- a/components/detail-zhuake.html
+++ b/components/detail-zhuake.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="item col-xs-12">
 					<div class="name">抓客客服沟通记录</div>
-					<div class="msg">
+					<div class="msg min-height-40">
             <span class="replace-data" data-name="zk-customer-record">
 						抓客客服沟通记录1<br> 抓客客服沟通记录2
             </span>
