--- a/components/detail-menshi.html
+++ b/components/detail-menshi.html
@@ -1,4 +1,4 @@
-<div class="has-menshi hidden panel panel-primary">
+<div class="show-customer-ms hidden panel panel-primary">
   <div class="panel-body">
     <div class="customer-info-message">
       <div class="title">
