--- a/components/detail-status.html
+++ b/components/detail-status.html
@@ -19,7 +19,7 @@
           </p>
 				</div>
 			</div>
-			<div class="has-yaoyue message-tr hidden">
+			<div class="show-status-yy message-tr hidden">
 				<div class="tr-title col-xs-2">
 					邀约
 				</div>
@@ -31,7 +31,7 @@
           </p>
 				</div>
 			</div>
-			<div class="has-menshi message-tr hidden">
+			<div class="show-status-ms message-tr hidden">
 				<div class="tr-title col-xs-2">
 					到店
 				</div>
@@ -55,6 +55,7 @@
 			<a id="zk-shensu" href="../zhuake/operate-shensu.html" class="btn btn-default hidden">申诉</a>
 			<a id="zk-wuxiao" href="../zhuake/operate-wuxiao.html" class="btn btn-default hidden">无效</a>
 
+			<a id="yy-add" href="../yaoyue/add.html" class="btn btn-default hidden">新增沟通记录</a>
 			<a id="yy-baobei" href="../yaoyue/operate-baobei.html" class="btn btn-default hidden">报备</a>
 			<a id="yy-xiafa" href="../yaoyue/operate-xiafa.html" class="btn btn-default hidden">下发</a>
 			<a id="yy-zhifu" href="../yaoyue/operate-zhifu.html" class="btn btn-default hidden">支付</a>
