--- a/css/app.css
+++ b/css/app.css
@@ -131,8 +131,17 @@ a:active {
     line-height: 34px;
     text-align: center;
 }
+
 .form-horizontal .control-label.left{
     text-align: left;
+}
+
+.form .file input {
+    position: absolute;
+    font-size: 100px;
+    right: 0;
+    top: 0;
+    opacity: 0;
 }
 /* form */
 
