fix: 修复iframe嵌套导致的高度自适应问题

--- a/components/detail.html
+++ b/components/detail.html
@@ -10,6 +10,10 @@
   <link rel="import" href="detail-menshi.html?__inline">
 </div>
 
+<script>
+	iframe.init();
+</script>
+
 <link rel="import" href="detail-js.html?__inline">
 
 <link rel="import" href="foot-iframe.html?__inline">
