feat: 除目标和报表外全部完成

--- a/components/detail-menshi.html
+++ b/components/detail-menshi.html
@@ -2,15 +2,15 @@
   <div class="panel-body">
     <div class="customer-info-message">
       <div class="title">
-        <div class="name col-xs-6">门店门市沟通记录</div>
+        <div class="name col-xs-6">门市沟通 <a href="../menshi/add.html" class="btn btn-warning btn-xs hidden" id="show-ms-modify">修改</a></div>
         <div class="user-info col-xs-6">
           <p class="username">
-            <span class="replace-data" data-name="ms-shop-name">新凯旋店</span>
+            <span class="replace-data" data-name="ms-shop-name"></span>
             ：
-            <span class="replace-data" data-name="ms-username">大卫</span>
+            <span class="replace-data" data-name="ms-username"></span>
           </p>
           <p class="date">
-            <span class="replace-data" data-name="ms-order-time">2016-09-09 18:00</span>
+            <span class="replace-data" data-name="ms-order-time"></span>
           </p>
         </div>
       </div>
@@ -18,7 +18,7 @@
         <div class="item col-xs-12">
 					<div class="name">门店沟通记录</div>
 					<div class="msg min-height-40">
-						<span class="replace-data" data-name="ms-customer-record">抓客客服沟通记录1<br> 抓客客服沟通记录2</span>
+						<span class="replace-data" data-name="ms-customer-record"></span>
 					</div>
 				</div>
       </div>
