--- a/components/detail-operations.html
+++ b/components/detail-operations.html
@@ -1,6 +1,6 @@
 <p>沟通快捷按钮</p>
 <div class="btn-group btn-group-justified margin-top-10">
-	<a href="#" class="btn btn-primary">发短信</a>
-	<a href="#" class="btn btn-primary">打电话</a>
-	<a href="#" class="btn btn-primary">加好友</a>
+	<a id="sms-customer" href="javascript:;" class="btn btn-primary">发短信</a>
+	<a id="call-customer" href="javascript:;" class="btn btn-primary">打电话</a>
+	<a id="add-customer" href="javascript:;" class="btn btn-primary">加好友</a>
 </div>
