--- a/components/detail-status.html
+++ b/components/detail-status.html
@@ -3,9 +3,9 @@
 	<div class="panel-body">
 		<div class="customer-status-message">
 			<div class="title">
-				客资状态：<span class="replace-data" data-name="status">客户到店已订单</span>
+				客资状态：<span class="replace-data" data-name="status"></span>
 				<div class="small">最近更新：
-					<span class="replace-data" data-name="last-modify">门店门市-张磊&nbsp;2016-09-09 19:22</span>
+					<span class="replace-data" data-name="last-modify"></span>
 				</div>
 			</div>
 			<div class="message-tr">
@@ -13,10 +13,7 @@
 					抓客
 				</div>
 				<div class="tr-info col-xs-10">
-          <p class="replace-data" data-name="msg-zk">
-            来源：抓客客服-阿君&nbsp;渠道：官网-百度<br/>
-            登记时间：2016-09-09 18:00
-          </p>
+          <p class="replace-data" data-name="msg-zk"></p>
 				</div>
 			</div>
 			<div class="show-status-yy message-tr hidden">
@@ -24,11 +21,7 @@
 					邀约
 				</div>
 				<div class="tr-info col-xs-10">
-          <p class="replace-data" data-name="msg-yy">
-            邀约：邀约客服-小丽&nbsp;方式：邀约到店<br/>
-            预计到店时间：2016年09月08日&nbsp;下午三四点<br/>
-            接收：2016-09-09 17:20&nbsp;下发：2016-09-09 19:20
-          </p>
+          <p class="replace-data" data-name="msg-yy"></p>
 				</div>
 			</div>
 			<div class="show-status-ms message-tr hidden">
@@ -36,26 +29,17 @@
 					到店
 				</div>
 				<div class="tr-info col-xs-10">
-          <p class="replace-data" data-name="msg-ms">
-            门店门市：金凯旋店-小敏
-            订单金额：3439元&nbsp;付款：1000
-            接收：2016-09-09 17:20&nbsp;订单：2016-09-09 19:20
-					</p>
+          <p class="replace-data" data-name="msg-ms"></p>
 				</div>
 			</div>
-      <div class="status-message replace-data" data-name="status-msg">
-        <p>等待客人进店订单...</p>
-        <p>原因：ask达拉斯刀口浪尖阿喀琉斯家的刻录机阿萨德卡就算了</p>
-      </div>
+      <div class="status-message replace-data" data-name="status-msg"></div>
 			<div id="status-operations" class="btn-group btn-group-justified margin-top-10"></div>
 			
-			<a id="zk-xiugai" href="../zhuake/add.html" class="btn btn-default hidden">修改</a>
 			<a id="zk-zhiding" href="../zhuake/operate-zhiding.html" class="btn btn-default hidden">指定</a>
 			<a id="zk-shanchu" href="../zhuake/operate-shanchu.html" class="btn btn-default hidden">删除</a>
 			<a id="zk-shensu" href="../zhuake/operate-shensu.html" class="btn btn-default hidden">申诉</a>
 			<a id="zk-wuxiao" href="../zhuake/operate-wuxiao.html" class="btn btn-default hidden">无效</a>
 
-			<a id="yy-add" href="../yaoyue/add.html" class="btn btn-default hidden">新增沟通记录</a>
 			<a id="yy-baobei" href="../yaoyue/operate-baobei.html" class="btn btn-default hidden">报备</a>
 			<a id="yy-xiafa" href="../yaoyue/operate-xiafa.html" class="btn btn-default hidden">下发</a>
 			<a id="yy-zhifu" href="../yaoyue/operate-zhifu.html" class="btn btn-default hidden">支付</a>
@@ -66,10 +50,11 @@
 			<a id="ms-gaiqi" href="../menshi/operate-gaiqi.html" class="btn btn-default hidden">改期</a>
 			<a id="ms-tuihui" href="../menshi/operate-tuihui.html" class="btn btn-default hidden">退回</a>
 			<a id="ms-zhuanyi" href="../menshi/operate-zhuanyi.html" class="btn btn-default hidden">转移</a>
+			<a id="ms-weidingdan" href="../menshi/operate-weidingdan.html" class="btn btn-default hidden">未订单</a>
 
 			<a id="ms-duanxin" href="../menshi/operate-duanxin.html" class="btn btn-default hidden">致谢短信</a>
 			<a id="ms-huodong" href="../menshi/operate-huodong.html" class="btn btn-default hidden">介绍活动</a>
-			<a id="ms-gaiqijin" href="../menshi/operate-gaiqijin.html" class="btn btn-default hidden">改期再进店</a>
+			<a id="ms-gaiqijin" href="../menshi/operate-gaiqi.html" class="btn btn-default hidden">改期再进店</a>
 			<a id="ms-zhuancke" href="../menshi/operate-zhuanc.html" class="btn btn-default hidden">转为C客</a>
 		</div>
 	</div>
