--- a/components/detail-zhuake.html
+++ b/components/detail-zhuake.html
@@ -2,71 +2,69 @@
 	<div class="panel-body">
 		<div class="customer-info-message">
 			<div class="title">
-				<div class="name col-xs-6">抓客资料</div>
+				<div class="name col-xs-6">抓客资料 <a href="../zhuake/add.html" class="btn btn-warning btn-xs hidden" id="show-zk-modify">修改</a></div>
 				<div class="user-info col-xs-6">
 					<p class="username">抓客组：
-						<span class="replace-data" data-name="zk-username">小敏</span>
+						<span class="replace-data" data-name="zk-username"></span>
 					</p>
 					<p class="date">
-            <span class="replace-data" data-name="zk-record-time">2016-09-09 18:00</span>
+            <span class="replace-data" data-name="zk-record-time"></span>
           </p>
 				</div>
 			</div>
 			<div class="info">
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">称呼</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-name">对客户的称呼</span>
+					<span class="name col-xs-3">称呼</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-name"></span>
           </span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">手机</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-cellphone">12345678901</span>
+					<span class="name col-xs-3">手机</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-cellphone"></span>
           </span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">渠道</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-channel">渠道</span>
+					<span class="name col-xs-3">渠道</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-channel"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">微信</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-wechat">微信阿萨德</span>
+					<span class="name col-xs-3">微信</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-wechat"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">地区</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-location">江苏</span>
+					<span class="name col-xs-3">地区</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-location"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">QQ</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-qq">13447823</span>
+					<span class="name col-xs-3">QQ</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-qq"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">类别</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-type">123123</span>
+					<span class="name col-xs-3">类别</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-type"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-2">身份</span>
-					<span class="msg col-xs-10">
-            <span class="replace-data" data-name="zk-customer-identity">新郎</span>
+					<span class="name col-xs-3">身份</span>
+					<span class="msg col-xs-9">
+            <span class="replace-data" data-name="zk-customer-identity"></span>
 					</span>
 				</div>
 				<div class="item col-xs-12">
 					<div class="name">抓客客服沟通记录</div>
 					<div class="msg min-height-40">
-            <span class="replace-data" data-name="zk-customer-record">
-						抓客客服沟通记录1<br> 抓客客服沟通记录2
-            </span>
+            <span class="replace-data" data-name="zk-customer-record"></span>
 					</div>
 				</div>
 			</div>
