--- a/components/detail.html
+++ b/components/detail.html
@@ -1,4 +1,4 @@
-<link rel="import" href="head-iframe.html?__inline">
+<link rel="import" href="head.html?__inline">
 
 <div class="container">
 	<div class="map-head"><span class="vertical-line"></span>客资详情</div>
@@ -16,4 +16,4 @@
 
 <link rel="import" href="detail-js.html?__inline">
 
-<link rel="import" href="foot-iframe.html?__inline">
+<link rel="import" href="foot.html?__inline">
