--- a/components/detail-js.html
+++ b/components/detail-js.html
@@ -8,13 +8,13 @@
 
     // 重新组装值
     var newObj = {
-      statusCode: 2,//obj.customer_user_status, // 状态code
-      currentUserRole: 2,//api.userInfo.groupFlag, // 当前用户角色
+      statusCode: parseInt(obj.customer_user_status), // 状态code
+      currentUserRole: parseInt(api.userInfo.groupFlag), // 当前用户角色
       status: function(){
-        return api.getStatusName(newObj.statusCode);
+        return api.getStatusName(newObj.statusCode, obj.valid_flag);
       },
       lastModify: function(){
-        var lastModifyTime = new Date(obj.modify_time).format("yyyy-MM-dd hh:mm"),
+        var lastModifyTime = api.getFormatDate(obj.modify_time, "yyyy-MM-dd hh:mm"),
             msg = '',
             modifyGroupFlag = parseInt(obj.modify_group_flag);
         if(modifyGroupFlag == 1){
@@ -32,7 +32,7 @@
         var msg = '';
         msg += '来源：抓客客服-' + obj.uzkName + '<br/>'
          + '渠道：' + obj.channelName + '-' + obj.channelWayName + '<br/>'
-         + '登记时间：' + new Date(obj.zkcreate_time).format("yyyy-MM-dd hh:mm");
+         + '登记时间：' + api.getFormatDate(obj.zkcreate_time,"yyyy-MM-dd hh:mm");
         return msg;
       },
       msgYy: function(){
@@ -40,16 +40,19 @@
         msg += '邀约：邀约客服-' + obj.uykName + '<br/>';
         switch(newObj.statusCode){
           case 1: break;
-          case 2: case 3: 
-            msg += '报备时间：' + new Date(obj.yytime).format("yyyy-MM-dd hh:mm");
+          case 2:
+            msg += '接收时间：' + api.getFormatDate(obj.yycreate_time,"yyyy-MM-dd hh:mm");
+            break;
+          case 3: 
+            msg += '报备时间：' + api.getFormatDate(obj.yytime,"yyyy-MM-dd hh:mm");
             break;
           case 4:
-            msg += '退回时间：' + new Date(obj.yytime).format("yyyy-MM-dd hh:mm");
+            msg += '退回时间：' + api.getFormatDate(obj.yytime,"yyyy-MM-dd hh:mm");
             break;
           case 5: case 6: case 7: case 8: case 9: case 10: 
-            msg += '下发时间：' + new Date(obj.yytime).format("yyyy-MM-dd hh:mm") + '<br/>';
+            msg += '下发时间：' + api.getFormatDate(obj.yytime,"yyyy-MM-dd hh:mm") + '<br/>';
             msg += '预计进店：' 
-              + new Date(obj.shop_date).format("yyyy-MM-dd") + '&nbsp;' + obj.str_shop_date;
+              + api.getFormatDate(obj.shop_date,"yyyy-MM-dd") + '&nbsp;' + obj.str_shop_date;
             break;
           case 11: case 12: case 13:
             msg += '网络预约暂时不做'; // TODO
@@ -61,12 +64,12 @@
       msgMs: function(){
         var msg = '';
         function ms1(msg){
-          msg += '下发门店：' + obj.umdName;
+          msg += '下发门店：' + obj.msworkCenterName;
           return msg;
         }
         function ms2(msg){
-          msg += '接待门市' + obj.umkName + '<br/>'
-            + '接收时间：' + new Date(obj.mscreate_time).format("yyyy-MM-dd hh:mm");
+          msg += '接待门市：' + obj.umkName + '<br/>'
+            + '接收时间：' + api.getFormatDate(obj.mscreate_time,"yyyy-MM-dd hh:mm");
           return msg;
         }
         switch(newObj.statusCode){
@@ -85,24 +88,24 @@
             msg += '<br/>';
             msg = ms2(msg);
             msg += '<br/>';
-            msg += '沟通改期：' + 'unknown'; // TODO
-            console.log('未知：门店沟通改期');
-            msg += '改期进店：' + 'unknown'; // TODO
-            console.log('未知：门店改期进店（2个值）');
+            msg += '沟通改期：' + api.getFormatDate(obj.mstime,"yyyy-MM-dd hh:mm");
+            msg += '<br/>';
+            msg += '改期进店：'
+              + api.getFormatDate(obj.change_shop_date,"yyyy-MM-dd") + '&nbsp;' + obj.str_change_shop_date;
             break;
           case 8:
             msg = ms1(msg);
             msg += '<br/>';
             msg = ms2(msg);
             msg += '<br/>';
-            msg += '退回时间：' + new Date(obj.mstime).format("yyyy-MM-dd hh:mm");
+            msg += '退回时间：' + api.getFormatDate(obj.mstime,"yyyy-MM-dd hh:mm");
             break;
           case 9:
             msg = ms1(msg);
             msg += '<br/>';
             msg = ms2(msg);
             msg += '<br/>';
-            msg += '订单时间：' + new Date(obj.mstime).format("yyyy-MM-dd hh:mm");
+            msg += '订单时间：' + api.getFormatDate(obj.mstime,"yyyy-MM-dd hh:mm");
             msg += '<br/>';
             msg += '订单金额：' + obj.order_cost + '&nbsp;' + '付款：' + obj.paid;
             break;
@@ -111,7 +114,7 @@
             msg += '<br/>';
             msg = ms2(msg);
             msg += '<br/>';
-            msg += '进店时间：' + new Date(obj.mstime).format("yyyy-MM-dd hh:mm");
+            msg += '进店时间：' + api.getFormatDate(obj.mstime,"yyyy-MM-dd hh:mm");
             break;
           case 11: case 12: case 13:
             msg += '网络预约暂时不做'; // TODO
@@ -134,12 +137,16 @@
           case 4:
             switch(newObj.currentUserRole){
               case 1:
-                msg += '退回客资验证...';
-                reason += '理由：' + 'unknown'; // TODO
-                console.log('未知：邀约退回理由');
+                if(obj.valid_flag == 2){
+                  msg += '退回客资，已经无效';
+                }else{
+                  msg += '退回客资验证...';
+                }
+                reason += '理由：<br />' + api.getTextAreaShow(obj.yyback_reason);
                 break;
               case 2:
                 msg += '客资已经退回，等待处理...';
+                reason += '理由：<br />' + api.getTextAreaShow(obj.yyback_reason);
                 break;
               default: msg += '未知客服';
             }
@@ -152,10 +159,9 @@
               case 1:
                 msg += '等待客人进店订单...';
                 break;
-              case 2:
-                msg += '退回理由...';
-                reason += '理由：' + 'unknown'; // TODO
-                console.log('未知：门市退回理由');
+              case 2: case 3:
+                msg += '门市退回...';
+                reason += '理由：<br />' + api.getTextAreaShow(obj.msback_reason);
                 break;
               default: msg += '未知客服';
             }
@@ -170,8 +176,7 @@
                 break;
               case 2: case 3:
                 msg += '客人不订单理由...';
-                reason += '理由：' + 'unknown'; // TODO
-                console.log('未知：门市客人不订单理由');
+                reason += '理由：<br />' + api.getTextAreaShow(obj.no_order_reason);
                 break;
               default: msg += '未知客服';
             }
@@ -183,17 +188,17 @@
         }
         result = '<p>' + msg + '</p>';
         if(reason){
-          result = '<p>' + reason + '</p>';
+          result += '<p>' + reason + '</p>';
         }
         return result;
       },
       zkUsername: obj.uzkName,
       zkRecordTime: function(){
-        return new Date(obj.zkcreate_time).format("yyyy-MM-dd hh:mm");
+        return api.getFormatDate(obj.zkcreate_time,"yyyy-MM-dd hh:mm");
       },
       zkCustomerName: obj.name1,
       zkCustomerCellphone: obj.tel1,
-      zkCustomerChannel: obj.channelName,
+      zkCustomerChannel: obj.channelName + '-' + obj.channelWayName,
       zkCustomerWechat: obj.wechat1,
       zkCustomerLocation: obj.locationName,
       zkCustomerQq: obj.qq1,
@@ -201,25 +206,27 @@
         return api.getCustomerFlagName(obj.customer_flag);
       },
       zkCustomerIdentity: obj.name_flag,
-      zkCustomerRecord: obj.zkrecord,
+      zkCustomerRecord: api.getTextAreaShow(obj.zkrecord),
       yyUsername: obj.uykName,
-      yyTransferData: obj.yytime,
+      yyTransferData: function(){
+        return api.getFormatDate(obj.yytime,"yyyy-MM-dd hh:mm");
+      },
       yyCustomerWeddingDate: function(){
-        return new Date(obj.wedding_date).format("yyyy-MM-dd");
+        return api.getFormatDate(obj.wedding_date,"yyyy-MM-dd");
       },
       yyCustomerShootingDate: function(){
-        return new Date(obj.shooting_time).format("yyyy-MM-dd");
+        return api.getFormatDate(obj.shooting_time,"yyyy-MM-dd");
       },
       yyCustomerBalance: obj.str_budget,
       yyCustomerRelation: obj.type_name,
-      yyCustomerShootingRecord: obj.shoot_idea,
-      yyCustomerWorryRecord: obj.care_problem,
-      yyCustomerOrderRecord: obj.need,
-      yyCustomerRecord: obj.yyrecord,
-      msShopName: obj.smdName,
+      yyCustomerShootingRecord: api.getTextAreaShow(obj.shoot_idea),
+      yyCustomerWorryRecord: api.getTextAreaShow(obj.care_problem),
+      yyCustomerOrderRecord: api.getTextAreaShow(obj.need),
+      yyCustomerRecord: api.getTextAreaShow(obj.yyrecord),
+      msShopName: obj.msworkCenterName,
       msUsername: obj.umkName,
       msOrderTime: obj.mstime,
-      msCustomerRecord: obj.msrecord,
+      msCustomerRecord: api.getTextAreaShow(obj.msrecord),
     };
 
     // 替换数据
@@ -229,12 +236,16 @@
       replaceName = dash2Hump($(this).data('name'));
       replaceValue = newObj[replaceName];
       if(undefined == replaceValue){
-        console.log(replaceName);
-        //$(this).text('unknown');
+        logger('字段无值，跳过',replaceName);
       }else{
         $(this).html(replaceValue);
       }
     });
+
+    // 发短信、打电话、加好友操作
+    $('#sms-customer').attr('href', 'sms:' + obj.tel1);
+    $('#call-customer').attr('href', 'tel:' + obj.tel1);
+    // $('#add-customer').attr('href', 'sms:' + obj.tel1);
 
     // 状态和客资详情邀约和门市信息的显示或隐藏
     var showStatusYy = false,
@@ -242,28 +253,34 @@
         showCustomerYy = false,
         showCustomerMs = false;
     if(newObj.statusCode >= 2){
+      // 接收之后邀约状态都可以看
       showStatusYy = true;
-      if(newObj.statusCode >= 3){
+      // 接收之后,邀约客服可以填写邀约信息
+      if(newObj.currentUserRole == 2){
         showCustomerYy = true;
-        if(newObj.statusCode >= 3){
+      }
+      if(newObj.statusCode >= 3){
+        // 报备之后邀约信息都可以看
+        showCustomerYy = true;
+        if(newObj.statusCode >= 5){
+          // 下发之后门市状态都可以看
           showStatusMs = true;
-          if(newObj.statusCode >= 4){
-            showCustomerMs = true;
-          }
+          // 下发之后门市信息都可见
+          showCustomerMs = true;
         }
       }
     }
     if(showStatusYy){
-      $('.show-status-yy').removeClass('hidden')
+      $('.show-status-yy').removeClass('hidden');
     }
     if(showStatusMs){
-      $('.show-status-ms').removeClass('hidden')
+      $('.show-status-ms').removeClass('hidden');
     }
     if(showCustomerYy){
-      $('.show-customer-yy').removeClass('hidden')
+      $('.show-customer-yy').removeClass('hidden');
     }
     if(showCustomerMs){
-      $('.show-customer-ms').removeClass('hidden')
+      $('.show-customer-ms').removeClass('hidden');
     }
 
     // 操作按钮的显示隐藏
@@ -281,35 +298,27 @@
     // 可操作按钮的显示
     if(newObj.statusCode==1){
       if(newObj.currentUserRole==1){
-        // 修改链接追加参数
-        var xiugaiUrl = $('#zk-xiugai').attr('href');
-        xiugaiUrl = request.addParam(xiugaiUrl, 'type', 'update');
-        $('#zk-xiugai').attr('href', xiugaiUrl);
-
-        showOperation(['zk-xiugai', 'zk-zhiding', 'zk-shanchu']);
+        showOperation(['zk-zhiding', 'zk-shanchu']);
       }
     }else if(newObj.statusCode==2){
       if(newObj.currentUserRole==2){
-        if(newObj.weeding){
-          // TODO 新增沟通记录需要定义不同的方式
-        }
-        showOperation(['yy-add', 'yy-baobei', 'yy-xiafa', 'yy-zhifu', 'yy-zhuanyi', 'yy-tuihui']);
+        showOperation(['yy-baobei', 'yy-xiafa', 'yy-zhifu', 'yy-zhuanyi', 'yy-tuihui']);
       }
     }else if(newObj.statusCode==3){
       if(newObj.currentUserRole==2){
-        showOperation(['yy-add', 'yy-xiafa', 'yy-zhifu', 'yy-zhuanyi']);
+        showOperation(['yy-xiafa', 'yy-zhifu', 'yy-zhuanyi']);
       }
     }else if(newObj.statusCode==4){
-      if(newObj.currentUserRole==1){
-        showOperation(['zk-xiugai', 'zk-shensu', 'zk-wuxiao']);
+      if(obj.valid_flag != 2 && newObj.currentUserRole==1){
+        showOperation(['zk-shensu', 'zk-wuxiao']);
       }
     }else if(newObj.statusCode==6 || newObj.statusCode==7){
       if(newObj.currentUserRole==3){
-        showOperation(['ms-dingdan', 'ms-gaiqi', 'ms-tuihui', 'ms-zhuanyi']);
+        showOperation(['ms-dingdan', 'ms-gaiqi', 'ms-tuihui', 'ms-zhuanyi', 'ms-weidingdan']);
       }
     }else if(newObj.statusCode==8){
       if(newObj.currentUserRole==2){
-        showOperation(['yy-add', 'yy-xiafa', 'yy-zhifu', 'yy-zhuanyi']);
+        showOperation(['yy-xiafa', 'yy-zhifu', 'yy-zhuanyi']);
       }
     }else if(newObj.statusCode==9){
       if(newObj.currentUserRole==3){
@@ -318,6 +327,42 @@
     }else if(newObj.statusCode==10){
       if(newObj.currentUserRole==3){
         showOperation(['ms-duanxin', 'ms-gaiqijin', 'ms-zhuancke']);
+      }
+    }
+
+    // 抓客、邀约、门市沟通记录是否可以修改
+    if(newObj.currentUserRole==1){
+      // 报备前，抓客可修改抓客信息
+      if(newObj.statusCode <= 2){
+        var zkModifyUrl = $('#show-zk-modify').attr('href');
+        zkModifyUrl = request.addParam(zkModifyUrl, 'type', 'update');
+        zkModifyUrl = request.addParam(zkModifyUrl, 'id', obj.uuid);
+        zkModifyUrl = request.addParam(zkModifyUrl, 'redirect', 'history');
+        $('#show-zk-modify').attr('href', zkModifyUrl).removeClass('hidden');
+      }
+    }else if(newObj.currentUserRole==2){
+      // 接收后，下发前，邀约可修改抓客信息
+      if(newObj.statusCode > 1 && newObj.statusCode <= 4 ){
+        var zkModifyUrl = $('#show-zk-modify').attr('href');
+        zkModifyUrl = request.addParam(zkModifyUrl, 'type', 'update');
+        zkModifyUrl = request.addParam(zkModifyUrl, 'id', obj.uuid);
+        zkModifyUrl = request.addParam(zkModifyUrl, 'redirect', 'history');
+        $('#show-zk-modify').attr('href', zkModifyUrl).removeClass('hidden');
+      }
+      // 接收后，邀约可修改邀约信息
+      if(newObj.statusCode > 1){
+        var yyModifyUrl = $('#show-yy-modify').attr('href');
+        yyModifyUrl = request.addParam(yyModifyUrl, 'type', 'update');
+        yyModifyUrl = request.addParam(yyModifyUrl, 'id', obj.uuid);
+        $('#show-yy-modify').attr('href', yyModifyUrl).removeClass('hidden');
+      }
+    }else if(newObj.currentUserRole==3){
+      // 下发后，门市可修改门市信息
+      if(newObj.statusCode > 4){
+        var msModifyUrl = $('#show-ms-modify').attr('href');
+        msModifyUrl = request.addParam(msModifyUrl, 'type', 'update');
+        msModifyUrl = request.addParam(msModifyUrl, 'id', obj.uuid);
+        $('#show-ms-modify').attr('href', msModifyUrl).removeClass('hidden');
       }
     }
 
