--- a/components/detail-yaoyue.html
+++ b/components/detail-yaoyue.html
@@ -2,13 +2,13 @@
 	<div class="panel-body">
 		<div class="customer-info-message">
 			<div class="title">
-				<div class="name col-xs-6">邀约沟通信息</div>
+				<div class="name col-xs-6">邀约沟通 <a href="../yaoyue/add.html" class="btn btn-warning btn-xs hidden" id="show-yy-modify">修改</a></div>
 				<div class="user-info col-xs-6">
 					<p class="username">邀约组：
-						<span class="replace-data" data-name="yy-username">阿维</span>
+						<span class="replace-data" data-name="yy-username"></span>
 					</p>
 					<p class="date">
-            <span class="replace-data" data-name="yy-transfer-data">2016-09-09 18:00</span>
+            <span class="replace-data" data-name="yy-transfer-data"></span>
           </p>
 				</div>
 			</div>
@@ -16,49 +16,49 @@
 				<div class="item col-xs-6">
 					<span class="name col-xs-4">结婚婚期</span>
 					<span class="msg col-xs-8">
-            <span class="replace-data" data-name="yy-customer-wedding-date">2016-09-09</span>
+            <span class="replace-data" data-name="yy-customer-wedding-date"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-4">拍摄时间</span>
 					<span class="msg col-xs-8">
-            <span class="replace-data" data-name="yy-customer-shooting-date">2016-09-09</span>
+            <span class="replace-data" data-name="yy-customer-shooting-date"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
 					<span class="name col-xs-4">预算范围</span>
 					<span class="msg col-xs-8">
-            <span class="replace-data" data-name="yy-customer-balance">1000</span>
+            <span class="replace-data" data-name="yy-customer-balance"></span>
 					</span>
 				</div>
 				<div class="item col-xs-6">
-					<span class="name col-xs-4">关系套系</span>
+					<span class="name col-xs-4">产品套系</span>
 					<span class="msg col-xs-8">
-            <span class="replace-data" data-name="yy-customer-relation">xxxx</span>
+            <span class="replace-data" data-name="yy-customer-relation"></span>
 					</span>
 				</div>
 				<div class="item col-xs-12">
 					<div class="name">拍摄想法</div>
 					<div class="msg min-height-40">
-						<span class="replace-data" data-name="yy-customer-shooting-record">想法1<br> 想法2</span>
+						<span class="replace-data" data-name="yy-customer-shooting-record"></span>
 					</div>
 				</div>
         <div class="item col-xs-12">
 					<div class="name">担心问题</div>
 					<div class="msg min-height-40">
-						<span class="replace-data" data-name="yy-customer-worry-record">想法1<br> 想法2</span>
+						<span class="replace-data" data-name="yy-customer-worry-record"></span>
 					</div>
 				</div>
         <div class="item col-xs-12">
 					<div class="name">订单需求</div>
 					<div class="msg min-height-40">
-						<span class="replace-data" data-name="yy-customer-order-record">想法1<br> 想法2</span>
+						<span class="replace-data" data-name="yy-customer-order-record"></span>
 					</div>
 				</div>
         <div class="item col-xs-12">
 					<div class="name">邀约客服沟通记录</div>
 					<div class="msg min-height-40">
-						<span class="replace-data" data-name="yy-customer-record">想法1<br> 想法2</span>
+						<span class="replace-data" data-name="yy-customer-record"></span>
 					</div>
 				</div>
 			</div>
