--- a/components/link-datepicker-head.html
+++ b/components/link-datepicker-head.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="../css/bootstrap-datepicker3.min.css">
-<script src="../js/bootstrap-datepicker.min.js"></script>
-<script src="../js/bootstrap-datepicker.zh-CN.min.js"></script>
-
-
+<link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
+<script src="../js/bootstrap-datetimepicker.min.js"></script>
+<script src="../js/bootstrap-datetimepicker.zh-CN.js"></script>
