feat： 完成目标报表，准备做接口调试

--- a/components/detail-js.html
+++ b/components/detail-js.html
@@ -181,6 +181,9 @@
               default: msg += '未知客服';
             }
             break;
+          case 14:
+            msg += '邀约退回，抓客申诉中...';
+            break;
           case 11: case 12: case 13:
             msg += '网络预约暂时不做'; // TODO
             break;
