--- a/css/app-common.scss
+++ b/css/app-common.scss
@@ -51,12 +51,16 @@ a:active {
     margin: 0;
 }
 
+.no-padding{
+    padding: 0 !important;
+}
+
 .no-padding-left{
-    padding-left: 0;
+    padding-left: 0 !important;
 }
 
 .no-padding-top{
-    padding-top: 0;
+    padding-top: 0 !important;
 }
 
 .text-danger{
@@ -203,6 +207,15 @@ p{
     font-size: px2rem(14px);
 }
 
+.input-group-addon{
+    border: 1px solid #fff;
+    box-shadow: inset 0 1px 1px #fff;
+    background: #fff;
+    height: px2rem(34px);
+    line-height: 1.42857143;
+    padding: px2rem(6px) px2rem(12px);
+}
+
 .form-group {
     margin-bottom: px2rem(12px);
 }
@@ -219,7 +232,7 @@ p{
 select.input-sm,
 select.form-group-sm .form-control{
   height: px2rem(30px);
-  line-height: px2rem(30px);
+  line-height: 1.42857143;
 }
 
 .input-sm,
